adds project cat and some other overall css

--- a/index.html
+++ b/index.html
@@ -78,20 +78,6 @@
 <!--  -->
     <div id="work-row">
       <h2>Favorite Projects</h2>
-      <!-- Aldente -->
-      <div class='parent'>
-          <div class="col">
-              <img class='book' src=
-              "img/finalexample.gif" width="350">
-          </div>
-          <div class="detail">
-              <a href=
-              'https://github.com/euniceylee/aldente'target="_blank">
-              <h3>Al dente</h3></a>
-              <p class="pub">side project</p>
-              <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! This project resonated with a lot of folks on Twitter (people seem to really like impaling pieces of paper), so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>. Feel free to check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a> and tweet me if you build one yourself.</p>
-          </div>
-      </div>
         <!-- Waves -->
         <div class='parent'>
             <div class="col">
@@ -106,18 +92,17 @@
                 <p>A raspberry pi that records people’s spoken responses to personal questions and prints them in the form of a sound wave as a gift for being truthful. You can read more about our design and development process <a href="https://github.com/euniceylee/waves" target="_blank">here</a> and check out the code <a href="https://github.com/euniceylee/waves">here</a>. Waves made its debut at the Spring 2017 Segal Design Expo and was featured on the RPI <a href="https://www.raspberrypi.org/blog/printed-sound-wave/" target="_blank">blog</a> We were also interviewed and part of a two page spread of the September 2017 MagPi issue, the official Raspberry Pi Magazine! See pages 32 and 33 <a href="https://www.raspberrypi.org/magpi-issues/MagPi61.pdf" target="_blank">here</a>.</p>
             </div>
         </div>
-        <!-- Carebot -->
+        <!-- Alexa Skills  -->
         <div class='parent'>
-            <div class="col">
-                <img class='book' src=
-                "img/finalcarebot.gif" width="350">
-            </div>
+          <div class="col">
+              <img class='book' src=
+              "img/projectcat.jpg">
+          </div>
             <div class="detail">
-                <a href=
-                'https://github.com/mazhang2718/care-bot'target="_blank">
-                <h3>Carebot</h3></a>
-                <p class="pub">side project</p>
-                <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. We thought this served a need because, from our experiences, college campuses offer a limited amount of free counseling sessions. Students battling mental health don't often find the long-term help they need, and finding a quality specialist can be really scary/difficult. So, my buddy Matt and I built a prototype version of this bot at a hackathon hosted by ProPublica, Better Doctor and Yelp. Our project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
+                <a href=# target="_blank">
+                <h3>Project Cat Alexa Skill</h3></a>
+                <p class="pub">Discovery Communications</p>
+                <p> Wrote tests in Javascript and Newrelic for the Project Cat Alexa and Google skills. Designed and wrote utterances and conversational phrases </p>
             </div>
         </div>
         <div class='parent'>
@@ -130,7 +115,7 @@
                 'https://scene.knightlab.com/'target="_blank">
                 <h3>SceneVR</h3></a>
                 <p class="pub">Knight Lab</p>
-                <p>What if you could tell a story using panoramas and 360 photos? SceneVR uses a-frame to help create webVR friendly photo slideshows. I spent 6 months working on this tool as a UI/UX designer. The project is still in beta version but recently <a href="https://www.knightfoundation.org/articles/11-ideas-win-journalism-360-challenge-on-immersive-storytelling">won $35,000</a> from the Knight Foundation Journalism 360 Challenge. Check it out <a href="https://scene.knightlab.com/">here</a>.</p>
+                <p>What if you could tell a story using panoramas and 360 photos? <a href="https://scene.knightlab.com/">SceneVR</a> uses a-frame to create webVR friendly photo slideshows. I spent 6 months working on this tool as a UI/UX designer - designing for desktop, mobile and Google cardboard versions. Created mocks using Sketch and collaborated with the software engineer using agile methodology. The project is still in beta version but recently <a href="https://www.knightfoundation.org/articles/11-ideas-win-journalism-360-challenge-on-immersive-storytelling">won $35,000</a> from the Knight Foundation Journalism 360 Challenge. </p>
             </div>
         </div>
         <div class='parent'>
@@ -143,7 +128,7 @@
                 'http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii'target="_blank">
                 <h3>The Wrong Man</h3></a>
                 <p class="pub">NBC News</p>
-                <p>Lead designer and developer of a story that hit more than 450,000 page views. Collaborated with editorial and photo teams to decide the look and feel of the story. Used HTML, CSS, JavaScript, Node, Archie mark-up language. See it live <a href="http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii">here</a></p>
+                <p>Lead designer and developer of a story that reached more than 500,000 page views. Collaborated with editorial and photo teams to decide the look and feel of the story. Used HTML, CSS, JavaScript, Node, Archie mark-up language. See it live <a href="http://www.nbcnews.com/specials/the-wrong-man-thomas-webb-iii">here</a></p>
             </div>
         </div>
         <div class='parent'>
@@ -170,19 +155,7 @@
                 <p>Created graphics using D3.js and Illustrator to depict how far Team Refugee athletes traveled before finding refugee status. This was a collaborative project between the editorial and graphics team. See 18-year-old Syrian swimmer Yusra Mardini's journey <a href="http://www.nbcnews.com/card/rami-anis-journey-n621201">here</a>.</p>
             </div>
         </div>
-        <div class='parent'>
-            <div class="col">
-                <img class='book' src=
-                "img/doping.jpg"></a>
-            </div>
-            <div class="detail">
-                <a href=
-                'https://euniceylee.github.io/doping-athletes/'target="_blank">
-                <h3>Olympic Athletes Who Doped</h3></a>
-                <p class="pub">Side Project</p>
-                <p>Wanted to practice creating and designing graphics using a narrative approach, so I mocked this prototype based off a dataset I found about Olympic athletes caught for doping. Used HTML, CSS and JavaScript. Data notes and final prototype version found <a href="https://euniceylee.github.io/doping-athletes/">here</a>.</p>
-            </div>
-        </div>
+        <!-- Mobile Homepage -->
         <div class='parent'>
       <div class="col">
           <img class='book' src=
@@ -193,7 +166,7 @@
           <p class="pub">NBC News</p>
           <p>Created mock design comps of what the mobile home page will look like while featuring news from the Rio Olympics. Transformed a desktop design into a responsive, mobile friendly version that felt native but was also efficient.</p>
       </div>
-  </div>
+      </div>
         <div class='parent'>
             <div class="col">
                 <img class='book' src=
@@ -207,20 +180,70 @@
                 <p>Designed, developed, and wrote a service-orientated piece about OTC cold medications. The crux of the project was creating a card filtering system that explained common active ingredients in drug labels. I thought it would be useful for consumers at a pharmacy trying to make sense of an often overwhelming cold medication aisle. Due to time constraints, this project is not mobile responsive. Used HTML, CSS, JavaScript, and jQuery. See it live <a href="https://jour383-final.firebaseapp.com/">here</a>.</p>
             </div>
         </div>
-        <div class='parent'>
-            <div class="col">
-                <img class='book' src=
-                "img/iraq-isis.png">
-            </div>
-            <div class="detail">
-              <a href="https://iraq-a704c.firebaseapp.com/" target="_blank">
-                <h3>A Year of Terror in Iraq</h3></a>
-                <p class="pub">Side Project</p>
-                <p>I came across an article in the BCC explaining the biggest ISIS-led attack in Iraq around June 2016. I thought that the article could really use a benefit so I decided to practice my D3, Illustrator, and ai2tml skills to create a map version. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details. See it live <a href="https://iraq-a704c.firebaseapp.com/">here</a>.</p>
-            </div>
-        </div>
-        <br>
-        <br>
+        <!-- End here  -->
+
+        <div id="odds-row">
+          <h2>Prototypes/Odds and Ends</h2>
+          <!-- Aldente -->
+          <div class='parent'>
+              <div class="col">
+                  <img class='book' src=
+                  "img/finalexample.gif" width="350">
+              </div>
+              <div class="detail">
+                  <a href=
+                  'https://github.com/euniceylee/aldente'target="_blank">
+                  <h3>Al dente</h3></a>
+                  <p class="pub">side project</p>
+                  <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! This project resonated with a lot of folks on Twitter (people seem to really like impaling pieces of paper), so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>. Feel free to check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a> and tweet me if you build one yourself.</p>
+              </div>
+          </div>
+          <!-- Carebot -->
+          <div class='parent'>
+              <div class="col">
+                  <img class='book' src=
+                  "img/finalcarebot.gif" width="350">
+              </div>
+              <div class="detail">
+                  <a href=
+                  'https://github.com/mazhang2718/care-bot'target="_blank">
+                  <h3>Carebot</h3></a>
+                  <p class="pub">side project</p>
+                  <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. We thought this served a need because, from our experiences, college campuses offer a limited amount of free counseling sessions. Students battling mental health don't often find the long-term help they need, and finding a quality specialist can be really scary/difficult. So, my buddy Matt and I built a prototype version of this bot at a hackathon hosted by ProPublica, Better Doctor and Yelp. Our project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
+              </div>
+          </div>
+          <!-- Year of Terror -->
+          <div class='parent'>
+              <div class="col">
+                  <img class='book' src=
+                  "img/iraq-isis.png">
+              </div>
+              <div class="detail">
+                <a href="https://iraq-a704c.firebaseapp.com/" target="_blank">
+                  <h3>A Year of Terror in Iraq</h3></a>
+                  <p class="pub">Side Project</p>
+                  <p>I came across an article in the BCC explaining the biggest ISIS-led attack in Iraq around June 2016. I thought that the article could really use a benefit so I decided to practice my D3, Illustrator, and ai2tml skills to create a map version. Used D3.js to create the basemap, converted it to an SVG, and used Illustrator to label details. See it live <a href="https://iraq-a704c.firebaseapp.com/">here</a>.</p>
+              </div>
+          </div>
+          <!-- Olympic Athletes  -->
+          <div class='parent'>
+              <div class="col">
+                  <img class='book' src=
+                  "img/doping.jpg"></a>
+              </div>
+              <div class="detail">
+                  <a href=
+                  'https://euniceylee.github.io/doping-athletes/'target="_blank">
+                  <h3>Olympic Athletes Who Doped</h3></a>
+                  <p class="pub">Side Project</p>
+                  <p>Wanted to practice creating and designing graphics using a narrative approach, so I mocked this prototype based off a dataset I found about Olympic athletes caught for doping. Used HTML, CSS and JavaScript. Data notes and final prototype version found <a href="https://euniceylee.github.io/doping-athletes/">here</a>.</p>
+              </div>
+          </div>
+
+
+
+
+
         <div id="talks-row">
             <h2>Favorite Talks</h2>
             <div class='parent'>
