--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hi there! I'm a design-minded storyteller and hobbyist developer at Northwestern University. I like to create work that explores the intersections of art, design and code - usually in the form of side projects. At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> where I build community and a human computer interaction (HCI) researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Most recently, I just wrapped up my summer at Discovery Channel as a design research intern. Other past gigs include covering the 2016 election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a>, creating graphics for <a href="www.nbcnews.com" target="_blank">NBC News</a> and improving ProPublica's APIs. </p>
+          <p class="description">Hi there! I'm a design-minded storyteller, hobbyist developer and (soon-to-be-graduating!) student at Northwestern University. I like to create work that explores the intersections of art, design and code - usually in the form of side projects! At school, I'm a student fellow at the <a href="https://www.knightlab.northwestern.edu/" target="_blank">Knight Lab</a> and a human computer interaction (HCI) researcher at the <a href="http://dtr.northwestern.edu/">Delta Lab</a>. Currently I'm a chat bot intern at Quartz, and previously I've worked at Discovery Channel and NBC. Other past gigs include covering the 2016 election for <a href="http://medillonthehill.medill.northwestern.edu/author/elee/" target="_blank"> Medill News Service</a> and improving ProPublica's APIs. </p>
     </div>
     <div id="words-row">
-        <h2>Favorite Words</h2>
+        <h2>Words</h2>
         <ul class="words-description">
           <li>
               <a href=
@@ -77,7 +77,35 @@
     </div>
 <!--  -->
     <div id="work-row">
-      <h2>Favorite Projects</h2>
+      <h2>Professional Projects and Odds/Ends</h2>
+      <!-- Aldente -->
+      <div class='parent'>
+          <div class="col">
+              <img class='book' src=
+              "img/finalexample.gif" width="350">
+          </div>
+          <div class="detail">
+              <a href=
+              'https://github.com/euniceylee/aldente'target="_blank">
+              <h3>Al dente</h3></a>
+              <p class="pub">side project</p>
+              <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! This project resonated with a lot of folks on Twitter (people seem to really like impaling pieces of paper), so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>. Feel free to check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a> and tweet me if you build one yourself.</p>
+          </div>
+      </div>
+      <!-- Carebot -->
+      <div class='parent'>
+          <div class="col">
+              <img class='book' src=
+              "img/finalcarebot.gif" width="350">
+          </div>
+          <div class="detail">
+              <a href=
+              'https://github.com/mazhang2718/care-bot'target="_blank">
+              <h3>Carebot</h3></a>
+              <p class="pub">side project</p>
+              <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. We thought this served a need because, from our experiences, college campuses offer a limited amount of free counseling sessions. Students battling mental health don't often find the long-term help they need, and finding a quality specialist can be really scary/difficult. So, my buddy Matt and I built a prototype version of this bot at a hackathon hosted by ProPublica, Better Doctor and Yelp. Our project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
+          </div>
+      </div>
         <!-- Waves -->
         <div class='parent'>
             <div class="col">
@@ -181,37 +209,6 @@
             </div>
         </div>
         <!-- End here  -->
-
-        <div id="odds-row">
-          <h2>Prototypes/Odds and Ends</h2>
-          <!-- Aldente -->
-          <div class='parent'>
-              <div class="col">
-                  <img class='book' src=
-                  "img/finalexample.gif" width="350">
-              </div>
-              <div class="detail">
-                  <a href=
-                  'https://github.com/euniceylee/aldente'target="_blank">
-                  <h3>Al dente</h3></a>
-                  <p class="pub">side project</p>
-                  <p>Print out your Trello cards like a Michelin-starred chef and stab them once complete! This project resonated with a lot of folks on Twitter (people seem to really like impaling pieces of paper), so my friend Pam and I wrote a tutorial for the <a href="https://twitter.com/wearecolorcoded" target="_blank">Color Coded</a> tech community <a href="https://medium.com/wearecolorcoded/al-dente-6a55e79aaf10" target="_blank">here</a>. Feel free to check out the <a href="https://github.com/euniceylee/aldente" target="_blank">code</a> and tweet me if you build one yourself.</p>
-              </div>
-          </div>
-          <!-- Carebot -->
-          <div class='parent'>
-              <div class="col">
-                  <img class='book' src=
-                  "img/finalcarebot.gif" width="350">
-              </div>
-              <div class="detail">
-                  <a href=
-                  'https://github.com/mazhang2718/care-bot'target="_blank">
-                  <h3>Carebot</h3></a>
-                  <p class="pub">side project</p>
-                  <p>A Facebook messenger bot that helps college students find the right mental health specialist under their insurance plan and near their location. We thought this served a need because, from our experiences, college campuses offer a limited amount of free counseling sessions. Students battling mental health don't often find the long-term help they need, and finding a quality specialist can be really scary/difficult. So, my buddy Matt and I built a prototype version of this bot at a hackathon hosted by ProPublica, Better Doctor and Yelp. Our project won the $1,000 Yelp cash prize for best use of their API and the best use of the Better Doctor API award. You can <a href="https://medium.com/@euniceylee/how-we-built-carebot-ce162223596c">read more</a> about how we designed and developed it. <a href="https://github.com/mazhang2718/care-bot">Code here</a> </p>
-              </div>
-          </div>
           <!-- Year of Terror -->
           <div class='parent'>
               <div class="col">
