nbc mobile details update

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div class="detail">
           <h3>Olympic Mobile Homepage</h3></a>
           <p class="pub">NBC News</p>
-          <p>Created mock design comps of what the mobile home page will look like while featuring news from the Rio Olympics. Transformed a desktop design into a responsive, mobile friendly version that felt native but was also efficient.</p>
+          <p>Created mock design comps using Sketch of what the mobile home page should look like while featuring stories from the Rio Olympics. Transformed a desktop design into a responsive, mobile friendly version that felt native but was also efficient.</p>
       </div>
       </div>
         <div class='parent'>
