small fixes to edit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hi there! I'm a design-minded storyteller, hobbyist developer and (soon-to-be-graduating) student at Northwestern University. I like to create work that explores the intersections of art, design and code - usually in the form of side projects! Currently I'm a UX design intern at Apple working to create a more conversational Siri. In the past I've done everything from chatbot development to product design. Some companies I've worked for include Quartz, Discovery Channel, ProPublica and NBC News.
+          <p class="description">Hi there! I'm a design-minded storyteller, hobbyist developer and (soon-to-be-graduating) student at Northwestern University. I like to create work that explores the intersections of art, design and code - usually in the form of side projects! Currently I'm a UX design intern at <b>Apple</b> working to create a more conversational Siri. In the past I've done everything from chatbot development to product design. Some companies I've worked for include <b>Quartz, Discovery Channel, ProPublica </b> and <b>NBC News</b>. Please email me directly if you'd like to see my resume.
     </div>
 <!--  -->
     <div id="work-row">
@@ -40,9 +40,9 @@
           <div class="detail">
               <a href=
               'http://qz.com/m'target="_blank">
-              <h3>Quartz for Messenger</h3></a>
+              <h3>Quartz Facebook Messenger bot</h3></a>
               <p class="pub">Quartz</p>
-              <p>Quartz Bot Studio experiments with applications of bots, AI, and related technologies for journalism on new platforms. The studio builds on work from the Quartz app, which presents news in a conversational interface, as though the user is texting with Quartz. During my time I worked on conversational design, fixed bugs, wrote production code and wrote Obsessions content for the Quartz for Messenger bot, which made its debut at SXSW Interactive 2018. The bot has more than 8,000 active users. Check it out: http://qz.com/m</p>
+              <p>Quartz Bot Studio experiments with applications of bots, AI, and related technologies for journalism on new platforms. The studio builds on work from the Quartz app, which presents news in a conversational interface, as though the user is texting with Quartz. During my time I worked on conversational design, fixed bugs, wrote production code and wrote Obsessions content for the <a href="http://qz.com/m target="_blank">Quartz for Messenger</a> bot, which made its debut at SXSW Interactive 2018. The bot has more than 8,000 active users. Check it out: http://qz.com/m</p>
           </div>
       </div>
 
