aug 2018 changes to bio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Hi there! I'm a design-minded storyteller, hobbyist developer and (soon-to-be-graduating) student at Northwestern University. I like to create work that explores the intersections of art, design and code - usually in the form of side projects! Currently I'm a UX design intern at <b>Apple</b> working to create a more conversational Siri. In the past I've done everything from chatbot development to product design. Some companies I've worked for include <b>Quartz, Discovery Channel, ProPublica </b> and <b>NBC News</b>. Please email me directly if you'd like to see my resume.
+          <p class="description">Eunice is a UX designer at Apple working on to create a more conversational Siri. When not designing, she enjoys spending time on side projects that explore the intersections of art, code, design, and (sometimes) the news. Prior to working in design, she was a journalist and chatbot developer. She has worked for NBC News, Quartz, ProPublica and Discovery Communications. </p>
     </div>
 <!--  -->
     <div id="work-row">
