--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Eunice is a UX designer at Apple working on to create a more conversational Siri. When not designing, she enjoys spending time on side projects that explore the intersections of art, code, design, and (sometimes) the news. Prior to working in design, she was a journalist and chatbot developer. She has worked for NBC News, Quartz, ProPublica and Discovery Communications. </p>
+          <p class="description">Eunice is a UX designer at Apple. When not designing, she enjoys spending time on side projects that explore the intersections of art, code, design, and (sometimes) the news. Prior to working in design, she was a journalist and chatbot developer. She has worked for NBC News, Quartz, ProPublica and Discovery Communications. </p>
     </div>
 <!--  -->
     <div id="work-row">
