--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Eunice is a UX designer at Apple. When not designing, she enjoys spending time on side projects that explore the intersections of art, code, design, and (sometimes) the news. Prior to working in design, she was a journalist and chatbot developer. She has worked for NBC News, Quartz, ProPublica and Discovery Communications. </p>
+          <p class="description">Eunice is a UX designer at Apple. When not designing, she enjoys tinkering on side projects that explore intersections of art, code, design, and news. While she is spending some time honing her design craft, she also has professional experience as a journalist for NBC News and The Washington Post as well as a developer for Quartz and ProPublica. </p>
     </div>
 <!--  -->
     <div id="work-row">
