--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </ul>
         </nav>
         <br>
-          <p class="description">Eunice is a UX designer at Apple. When not designing, she enjoys tinkering on side projects that explore intersections of art, code, design, and news. While she is spending some time honing her design craft, she also has professional experience as a journalist for NBC News and The Washington Post as well as a developer for Quartz and ProPublica. </p>
+          <p class="description">Eunice is a UX designer at Apple. When not designing, she enjoys tinkering on side projects that explore intersections of art, code, design, and news. She has aworked for NBC News and The Washington Post as a journalist and for Quartz and ProPublica as a front-end developer.</p>
     </div>
 <!--  -->
     <div id="work-row">
