--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="https://twitter.com/euniceylee" target="_blank"><strong>Twitter</strong></a></li>
             <li><a href="https://github.com/euniceylee" target="_blank"><strong>Github</strong></a></li>
             <li><a href="https://www.linkedin.com/in/euniceyounglee" target="_blank"><strong>LinkedIn</strong></a></li>
-            <li><a href="mailto:eunicelee96@gmail.com"><strong>Email</strong></a></li>
+            <li><a href="mailto:newseunice@gmail.com"><strong>Email</strong></a></li>
           </ul>
         </nav>
         <br>
